src/test/ui/generic-associated-types/bugs/issue-87748.stderr
error: where clause not allowed here
  --> $DIR/issue-87748.rs:16:24
   |
LL |     type Assoc<'a, 'b> where 'b: 'a = u32;
   |                        ^^^^^^^^^^^^      - help: move it here: `where 'b: 'a`

error[E0478]: lifetime bound not satisfied
  --> $DIR/issue-87748.rs:18:5
   |
LL |     fn do_sth(_: u32) {}
   |     ^^^^^^^^^^^^^^^^^
   |
note: lifetime parameter instantiated with the anonymous lifetime #2 defined here
  --> $DIR/issue-87748.rs:18:5
   |
LL |     fn do_sth(_: u32) {}
   |     ^^^^^^^^^^^^^^^^^
note: but lifetime parameter must outlive the anonymous lifetime #1 defined here
  --> $DIR/issue-87748.rs:18:5
   |
LL |     fn do_sth(_: u32) {}
   |     ^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0478`.
